--- a/config/locales/pl/models/users.yml
+++ b/config/locales/pl/models/users.yml
@@ -3,6 +3,9 @@ pl:
     models:
       user:
         one: Użytkownik
+        few: Użytkownicy
+        many: Użytkowników
+        other: Użytkowników
     attributes:
       user:
         login: Login
